--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,11 @@ dependencies {
     implementation "androidx.room:room-ktx:2.2.2"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.2"
 
+    //koin
+    implementation "io.insert-koin:koin-core:3.3.2"
+    implementation "io.insert-koin:koin-android:3.3.2"
+//    implementation "io.insert-koin:koin-android-viewmodel:3.3.2"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
