--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ plugins {
     id 'kotlin-kapt'
 }
 
+apply from: '../shared_dependencies.gradle'
+
 android {
     namespace 'com.rememberdev.productapp'
     compileSdk 34
@@ -35,47 +37,12 @@ android {
         jvmTarget = '17'
     }
 
-    buildFeatures{
+    buildFeatures {
         viewBinding = true
     }
 }
 
 dependencies {
-
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.10"
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.10.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-
-    implementation "androidx.legacy:legacy-support-v4:1.0.0"
-    implementation "androidx.multidex:multidex:2.0.1"
-    implementation "androidx.cardview:cardview:1.0.0"
-    implementation "androidx.recyclerview:recyclerview:1.3.2"
-    implementation "com.google.android.material:material:1.10.0"
-    implementation "com.github.bumptech.glide:glide:4.16.0"
-
-    implementation "androidx.room:room-runtime:2.6.0"
-    kapt "androidx.room:room-compiler:2.6.0"
-    androidTestImplementation "androidx.room:room-testing:2.6.0"
-
-    //retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.8.0"
-
-    //coroutine flow
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
-    implementation "androidx.room:room-ktx:2.2.2"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.2"
-
-    //koin
-    implementation "io.insert-koin:koin-core:3.3.2"
-    implementation "io.insert-koin:koin-android:3.3.2"
-//    implementation "io.insert-koin:koin-android-viewmodel:3.3.2"
-
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation project(":core")
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
