--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,36 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext.kotlin_version = '1.8.10'
+    ext.appcompat_version = '1.6.1'
+    ext.core_ktx_version = '1.10.1'
+    ext.constraint_version = '2.1.4'
+    ext.legacy_support_version = "1.0.0"
+    ext.junit_version = "4.13.1"
+    ext.androidx_junit_version = '1.1.5'
+    ext.espresso_version = '3.5.1'
+    ext.multidex_version = "2.0.1"
+    ext.activity_ktx_version = "1.1.0"
+    ext.fragment_ktx_version = "1.2.5"
+
+    ext.cardview_version = "1.0.0"
+    ext.recyclerview_version = '1.3.2'
+    ext.material_version = '1.10.0'
+    ext.glide_version = "4.16.0"
+
+    ext.room_version = '2.5.2'
+
+    //Retrofit
+    ext.retrofit_version = "2.9.0"
+    ext.logging_interceptor_version = "4.8.0"
+
+    //Coroutine
+    ext.kotlin_coroutines_version = "1.3.9"
+    ext.lifecycle_version = "2.2.0"
+
+    //Koin
+    ext.koin_version = "3.3.2"
+}
+
 plugins {
     id 'com.android.application' version '8.1.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
