--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,12 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.detail.DetailProductActivity"
-            android:exported="false" />
+            android:theme="@style/Base.Theme.ProductApp.NoActionBar"
+            android:label="@string/title_activity_detail_home" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Base.Theme.ProductApp.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
