--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ buildscript {
 
 plugins {
     id 'com.android.application' version '8.1.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'org.jetbrains.kotlin.android' version '2.0.0-Beta1' apply false
     id 'com.android.library' version '8.1.0' apply false
     id 'com.android.dynamic-feature' version '8.1.0' apply false
 }
