--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ android {
 dependencies {
     implementation project(":core")
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.core:core-ktx:+'
 }
