--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 buildscript {
     ext.kotlin_version = '1.8.10'
     ext.appcompat_version = '1.6.1'
-    ext.core_ktx_version = '1.10.1'
+    ext.core_ktx_version = '1.9.0'
     ext.constraint_version = '2.1.4'
     ext.legacy_support_version = "1.0.0"
     ext.junit_version = "4.13.1"
@@ -32,8 +32,8 @@ buildscript {
 }
 
 plugins {
-    id 'com.android.application' version '8.1.0' apply false
-    id 'org.jetbrains.kotlin.android' version '2.0.0-Beta1' apply false
-    id 'com.android.library' version '8.1.0' apply false
-    id 'com.android.dynamic-feature' version '8.1.0' apply false
+    id 'com.android.application' version '7.4.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'com.android.library' version '7.4.2' apply false
+    id 'com.android.dynamic-feature' version '7.4.2' apply false
 }
