--- a/core/build.gradle
+++ b/core/build.gradle
@@ -26,11 +26,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_17
-        targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = '1.8'
     }
 
     buildFeatures {
@@ -43,7 +43,7 @@ dependencies {
     implementation fileTree(dir: "libs", includes: ["*.jar"])
     //room
     implementation "androidx.room:room-runtime:$room_version"
-    implementation 'androidx.core:core-ktx:+'
+    implementation "androidx.core:core-ktx:$core_ktx_version"
     kapt "androidx.room:room-compiler:$room_version"
     androidTestImplementation "androidx.room:room-testing:$room_version"
 
