--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 # IDE (e.g. Android Studio) users:
 # Gradle settings configured through the IDE *will override*
 # any settings specified in this file.
-org.gradle.java.home=C:\\Program Files\\Java\\jdk-17.0.5
+Dorg.gradle.java.home=C\:/Program Files/Java/jdk-17.0.5
 # For more details on how to configure your build environment visit
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
